--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -10,7 +10,7 @@
                       <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">Добавить новость</a>
+                      <a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">Добавить новость</a>
                   </li>
 
               </ul>
