--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -12,6 +12,9 @@
                   <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">Добавить новость</a>
                   </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="{% url 'view_add_plugins' %}">Добавить плагин</a>
+                  </li>
 
               </ul>
           </div>
