--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
   </head>
   <body>
 
-{% include "include/_nav.html" %}
+{% load _nav_tags %}
+{% navigation %}
 
 <div class="container mt-3">
     <div class="row">
