--- a/orders/templates/orders/order_item.html
+++ b/orders/templates/orders/order_item.html
@@ -6,6 +6,7 @@
 
 {% endblock %}
 {% block content %}
-    {% load install_tags %}
-    {% install_plugin id tag %}
+
+    ORDER ITEM
+
 {% endblock %}
