--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -6,6 +6,8 @@
 
 {% endblock %}
 {% block content %}
-    {% load install_tags %}
-    {% install_plugin id tag %}
+
+
+    ORDER LIST
+
 {% endblock %}
