--- a/plugins/templates/plugins/migrate_view.html
+++ b/plugins/templates/plugins/migrate_view.html
@@ -6,6 +6,6 @@
 
 {% endblock %}
 {% block content %}
-    {% load install_tags %}
-    {% install_plugin id tag %}
+    {% load migrate_tags %}
+    {% migrate_plugin id %}
 {% endblock %}
