--- a/plugins/templates/plugins/plugins_list_view.html
+++ b/plugins/templates/plugins/plugins_list_view.html
@@ -2,13 +2,12 @@
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
 
-{% include 'include/_sidebar.html' %}
+{% include 'include/_sidebar_plugins.html' %}
 
 {% endblock %}
 {% block content %}
 
-
-            {% for item in plugins %}
+ {% for item in plugins %}
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
 
@@ -19,18 +18,10 @@
 
                         <p class="card-text">{{ item.description }}</p>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Категория: {% if item.category.pk %}
-                        <a href="{{ item.category.get_absolute_url }} "> {{ item.category.title }} </a>
-                        {% else %}
-                        No category
-                        {% endif %}</li>
 
-                    </ul>
                     <div class="card-body">
-                        <p><a href="{{ item.get_absolute_url }}" class="btn btn-primary">Установить</a></p>
                         <p>Скачать модуль: <a href="{{ item.zipfile }}" class="card-link"> {{ item.zipfile }}</a></p>
-                        <p><a href="{{ item.get_absolute_url }}" class="card-link"> Подробнее</a></p>
+                    <p><a href="{{ item.get_absolute_url }}" class="btn btn-primary">Подробнее</a></p>
                     </div>
                     <div class="card-footer text-muted">
                         Обновлено: {{ item.updated_at|date:"Y-m-d H:i" }}
@@ -39,6 +30,7 @@
                 </div>
 
             {% endfor %}
+
 
 {% endblock %}
 
