--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -2,7 +2,7 @@
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
 
-{% include 'include/_sidebar.html' %}
+{% include 'include/_sidebar_orders.html' %}
 
 {% endblock %}
 {% block content %}
