--- a/orders/templates/include/_sidebar_orders.html
+++ b/orders/templates/include/_sidebar_orders.html
@@ -1,2 +1,5 @@
-{% load sidebar_orders_tags %}
+{% load sidebar_status_tags %}
+{% load sidebar_menu_tags %}
+
 {% show_orders_status %}
+{% show_menu %}
