--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -2,12 +2,28 @@
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
 
-{% include 'include/_sidebar_orders.html' %}
+    {% include 'include/_sidebar_orders.html' %}
 
 {% endblock %}
 {% block content %}
 
 
-    ORDER LIST
+    <div class="row">
+        <div class="col-4">
+            <div class="list-group" id="list-tab" role="tablist">
+                {% for item in orders %}
+                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.device }}</a>
+                {% endfor %}
+            </div>
+        </div>
+            <div class="col-8">
+                <div class="tab-content" id="nav-tabContent">
+                     {% for item in orders %}
+                         <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">{{ item.comment }}</div>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+
 
 {% endblock %}
