--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -16,12 +16,25 @@
                 {% endfor %}
             </div>
         </div>
-            <div class="col-8">
-                <div class="tab-content" id="nav-tabContent">
-                     {% for item in orders %}
-                         <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">{{ item.comment }}</div>
-                {% endfor %}
+        <div class="col-8">
+            <div class="tab-content" id="nav-tabContent">
+
+                    {% for item in orders %}
+
+                        <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
+                            <div class="shadow p-3 mb-5 bg-body rounded">
+                            Заказ: {{ item.pk }}<br>
+                            Заказ: {{ item.pk }}<br>
+                                device
+                            Статус: {{ item.status }}<br>
+                            Серийный: {{ item.serial }}<br>
+                            Комментарий: {{ item.comment }}
+                            </div>
+                        </div>
+
+                    {% endfor %}
                 </div>
+
             </div>
         </div>
 
