--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -24,11 +24,11 @@
                         <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                             <div class="shadow p-3 mb-5 bg-body rounded">
                             Заказ: {{ item.pk }}<br>
-                            Заказ: {{ item.pk }}<br>
-                                device
+                            В ремонте: {{ item.device }}<br>
                             Статус: {{ item.status }}<br>
                             Серийный: {{ item.serial }}<br>
-                            Комментарий: {{ item.comment }}
+                            Комментарий: {{ item.comment }}<br>
+                            Категория: {{ item.category }}<br>
                             </div>
                         </div>
 
