--- a/plugins/templates/plugins/plugins_tags.html
+++ b/plugins/templates/plugins/plugins_tags.html
@@ -3,7 +3,7 @@
         {% if active_check %}
             {% if copydata %}
                 <div class="alert alert-success" role="alert">
-                    Демо данные установлены
+                    {{ info }}
                 </div>
             {% else %}
                 <p><a href="{{ plugins_item.get_absolute_url }}demodata" class="btn btn-primary">Установить demo данные</a></p>
