--- a/plugins/templates/plugins/plugins_detail_view.html
+++ b/plugins/templates/plugins/plugins_detail_view.html
@@ -5,19 +5,20 @@
 {% endblock %}
 {% block content %}
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
         <div class="card-header">
-
             <h5 class="card-title">{{ plugins_item.title }}</h5>
         </div>
-        <img src="{{ plugins_item.photo }}" class="card-img-top" alt="{{ item.title }}">
+        <div class="col-md-3">
+            <img src="{{ plugins_item.photo }}" class="card-img" alt="{{ item.title }}">
+        </div>
         <div class="card-body">
-
             <p class="card-text">{{ plugins_item.description }}</p>
         </div>
 
         {% load plugin_tags %}
-        {% action_plugin plugins_item.id tag %}
+        {% action_plugin plugins_item.id tag form %}
+
 
         <div class="card-footer text-muted">
             Обновлено: {{ item.updated_at|date:"Y-m-d H:i" }}<br>
