--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,8 +10,11 @@ Login :: {{ block.super }}
 
 {% block content %}
 
-<h1>Login</h1>
-
-
+    <h1>Login</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+    </form>
 
 {% endblock %}
