--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="{% static 'bootstrap-5.0.0/css/bootstrap.css' %}" rel="stylesheet">
-      <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="{% static 'jquery/jquery.js' %}"></script>
+
 
 
       <title>{% block title %}CRM3{% endblock %}</title>
