--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -17,6 +17,7 @@
                 {% for item in page_obj %}
                     <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                         <div class="shadow p-3 mb-5 bg-body rounded">
+                            {{ related_uuid }}
                             Заказ: {{ item.pk }}<br>
                             В ремонте: {{ item.device }}<br>
                             Статус: {{ item.status }}<br>
