--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -17,17 +17,34 @@
                 {% for item in page_obj %}
                     <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                         <div class="shadow p-3 mb-5 bg-body rounded">
-                            {% for related_item in related_list %}
-                                {% if item.related_uuid == related_item.related_uuid %}
-                                   {{ related_item }}<br>
+
+                                {% for related_item in related_list %}
+                                    {% if item.related_uuid == related_item.related_uuid %}
+                                        <div class="card border-light" >
+                                        <div class="card-header">{{ related_item.module_name }}</div>
+                                        <div class="card-body">
+                                        {% for key, value in related_item.items %}
+                                            {% if key != 'related_uuid' and key != 'module_name' %}
+                                                {{ key }}: {{ value }}<br>
+                                            {% endif %}
+                                        {% endfor %}
+                                        </div>
+                                        </div>
                                 {% endif %}
                             {% endfor %}
-                            Заказ: {{ item.pk }}<br>
-                            В ремонте: {{ item.device }}<br>
-                            Статус: {{ item.status }}<br>
-                            Серийный: {{ item.serial }}<br>
-                            Комментарий: {{ item.comment }}<br>
-                            Категория: {{ item.category }}<br>
+
+                            <div class="card border-light" >
+                                <div class="card-header bg-gradient">Заказ: {{ item.pk }}<br></div>
+                                <div class="card-body">
+                                    В ремонте: {{ item.device }}<br>
+                                    Статус: {{ item.status }}<br>
+                                    Серийный: {{ item.serial }}<br>
+                                    Комментарий: {{ item.comment }}<br>
+                                    Категория: {{ item.category }}<br>
+
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 {% endfor %}
