--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,51 @@
 body {
     background-color: #fefefe;
 }
+
+.bs-callout {
+padding: 20px;
+margin: 20px 0;
+border: 1px solid #eee;
+border-left-width: 5px;
+border-radius: 3px;
+}
+.bs-callout-danger {
+border-left-color: #d9534f;
+}
+.bs-callout-warning {
+border-left-color: #f0ad4e;
+}
+.bs-callout-info {
+border-left-color: #5bc0de;
+}
+.bs-callout h4 {
+margin-top: 0;
+margin-bottom: 5px;
+}
+.bs-callout-danger h4 {
+color: #d9534f;
+}
+.bs-callout-warning h4 {
+color: #f0ad4e;
+}
+.bs-callout-info h4 {
+color: #5bc0de;
+}
+.bs-callout-limegreen {
+border-left-color: #32cd32;
+}
+.bs-callout-mediumpurple {
+border-left-color: #9370db;
+}
+.bs-callout-rosybrown {
+border-left-color: #bc8f8f;
+}
+.bs-callout-limegreen h4 {
+color: #32cd32;
+}
+.bs-callout-mediumpurple h4 {
+color: #9370db;
+}
+.bs-callout-rosybrown h4 {
+color: #bc8f8f;
+}
