--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -8,7 +8,7 @@
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
                 {% for item in page_obj %}
-                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.device }}</a>
+                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.money }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -18,9 +18,9 @@
                     <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                         <div class="shadow p-3 mb-5 bg-body rounded">
                             Номер: {{ item.pk }}<br>
-                            Имя: {{ item.name }}<br>
-                            Телефон: {{ item.phone }}<br>
-                            Комментарий: {{ item.comment }}<br>
+                            Cумма: {{ item.money }}<br>
+                            Предоплата: {{ item.prepayment }}<br>
+                            Дата создания: {{ item.created_at }}<br>
                         </div>
                     </div>
                 {% endfor %}
