--- a/money/templates/money/sidebar_money_menu_tags.html
+++ b/money/templates/money/sidebar_money_menu_tags.html
@@ -1,3 +1,3 @@
 <div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action">Меню 1</a>
+    <a href="#" class="list-group-item list-group-item-action">Настройки</a>
 </div>
