--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -8,7 +8,7 @@
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
                 {% for item in page_obj %}
-                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.device }}</a>
+                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">Заказ {{ item.pk }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -17,10 +17,12 @@
                 {% for item in page_obj %}
                     <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                         <div class="shadow p-3 mb-5 bg-body rounded">
-
-                                {% for related_item in related_list %}
-                                    {% if related_item.related_uuid and item.related_uuid == related_item.related_uuid %}
-                                        <div class="card border-light" >
+                            <div class="d-flex justify-content-end">
+                                <a href="edit/{{ item.pk }}"><button type="button" class="btn btn-secondary">Редактировать</button></a>
+                            </div><br>
+                            {% for related_item in related_list %}
+                                {% if related_item.related_uuid and item.related_uuid == related_item.related_uuid %}
+                                    <div class="card border-light" >
                                         <div class="card-header">{{ related_item.module_name }}</div>
                                         <div class="card-body">
                                         {% for key, value in related_item.items %}
