--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link href="{% static 'bootstrap-5.0.0/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <!-- jQuery -->
-    <script src="{% static 'jquery/jquery.js' %}"></script>
+    <script src="{% static 'jquery/jquery-3.6.0.min.js' %}"></script>
 
 
 
