--- a/orders/templates/orders/order_add.html
+++ b/orders/templates/orders/order_add.html
@@ -7,14 +7,54 @@
 
 {% block content %}
 
-    <script type="text/javascript">
-  $(document).ready(
-    function(){
-      $("#jqtest").html("JQuery installed successfully!");
-    }
-  );
-</script>
-<p id="jqtest"></p>
+
+{% block javascript %}
+    <script>
+        $(document).ready(function () {
+            // catch the form's submit event
+            $('#ajax-service').keyup(function () {
+                // create an AJAX call
+                $.ajax({
+                    data: $(this).serialize(), // get the form data
+                    url: "{% url 'ajax_request' %}",
+                    // on success
+                    success: function (response) {
+                        if (response.is_exist == true) {
+                            let list = ''
+                            for (var i in response.is_taken) {
+                                list = list + '<span class="service-list-item badge bg-secondary" name="'+(response.is_taken[i])+'" id="service'+(i)+'">'+(response.is_taken[i])+'</span> '
+                                }
+                            //console.log("i: "+i);
+
+                            $('#ajax-service-list').remove();
+                            $('#ajax-service').after('<div id="ajax-service-list" name="ajax-service-list">'+(list)+'</div>')
+                            $(document).on('click', '.service-list-item', function(e){
+                               $('#ajax-service').val( $(this).text());
+                            });
+
+                        }
+                        else {
+                             $('#ajax-service-list').remove();
+                            $('#ajax-service').after('<div id="ajax-service-list" name="ajax-service-list"><span class="badge rounded-pill bg-warning text-dark" id="ajax-service-list">Нет совпадений</span></div>')
+                        }
+
+                    },
+                    // on error
+                    error: function (response) {
+                        // alert the error if any error occured
+                        console.log(response.responseJSON.errors)
+                    }
+                });
+
+                return false;
+            });
+        })
+    </script>
+
+
+
+
+{% endblock javascript %}
 
  <h3>
     {% if tag == 'fast' %}
