--- a/orders/templates/orders/sidebar_menu_tags.html
+++ b/orders/templates/orders/sidebar_menu_tags.html
@@ -26,5 +26,5 @@
 <br>
 <h5>Настройки</h5>
 <div class="list-group">
-    <a href="{% url 'order_add'%}" class="list-group-item list-group-item-action">Настройки</a>
+    <a href="{% url 'order_settings'%}" class="list-group-item list-group-item-action">Настройки</a>
 </div>
