--- a/orders/templates/orders/order_add.html
+++ b/orders/templates/orders/order_add.html
@@ -16,10 +16,12 @@
                 // create an AJAX call
                 $.ajax({
                     data: $(this).serialize(), // get the form data
-                    url: "{% url 'ajax_request' %}",
+                    url: "{% url 'ajax_request' %}?model=service",
                     // on success
                     success: function (response) {
+                        console.log('tyt1')
                         if (response.is_exist == true) {
+                            console.log('tyt')
                             let list = ''
                             for (var i in response.is_taken) {
                                 list = list + '<span class="service-list-item badge bg-secondary" name="'+(response.is_taken[i])+'" id="service'+(i)+'">'+(response.is_taken[i])+'</span> '
@@ -36,6 +38,45 @@
                         else {
                              $('#ajax-service-list').remove();
                             $('#ajax-service').after('<div id="ajax-service-list" name="ajax-service-list"><span class="badge rounded-pill bg-warning text-dark" id="ajax-service-list">Нет совпадений</span></div>')
+                        }
+
+                    },
+                    // on error
+                    error: function (response) {
+                        // alert the error if any error occured
+                        console.log(response.responseJSON.errors)
+                    }
+                });
+
+                return false;
+            });
+
+            $('#ajax-device').keyup(function () {
+                // create an AJAX call
+                $.ajax({
+                    data: $(this).serialize(), // get the form data
+                    url: "{% url 'ajax_request' %}?model=device",
+                    // on success
+                    success: function (response) {
+                        console.log('tyt1')
+                        if (response.is_exist == true) {
+                            console.log('tyt')
+                            let list = ''
+                            for (var i in response.is_taken) {
+                                list = list + '<span class="device-list-item badge bg-secondary" name="'+(response.is_taken[i])+'" id="device'+(i)+'">'+(response.is_taken[i])+'</span> '
+                                }
+                            //console.log("i: "+i);
+
+                            $('#ajax-device-list').remove();
+                            $('#ajax-device').after('<div id="ajax-device-list" name="ajax-device-list">'+(list)+'</div>')
+                            $(document).on('click', '.device-list-item', function(e){
+                               $('#ajax-device').val( $(this).text());
+                            });
+
+                        }
+                        else {
+                             $('#ajax-device-list').remove();
+                            $('#ajax-device').after('<div id="ajax-device-list" name="ajax-device-list"><span class="badge rounded-pill bg-warning text-dark" id="ajax-service-list">Нет совпадений</span></div>')
                         }
 
                     },
